--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "( ⸝⸝•ᴗ•⸝⸝ )੭⁾⁾"
 title_separator          : "-"
-name                     : "Your Name"
+name                     : "Jihyun KIM 김지현"
 description              : "An amazing website."
 url                      : "https://jihyun1110.github.io" # the base hostname & protocol for your site
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -101,10 +101,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Jihyun KIM 김지현"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
+  bio              : "2018"
+  location         : "Seoul, Republic of Korea"
   email            :
   links:
     - label: "Email"
